# weatherForecast

./: .gitignore  CMakeLists.txt  README.md  cache.json  configUser.json  main_cli.cpp  main_gui.cpp  weather_class_diagram.puml  weather_combined_structure_and_class.puml
CRULTest/: WeatherHefeng.http  test.http
cli/: cli_ai_advisor.cpp  cli_ai_advisor.h  cli_animation_loader.h  cli_application.cpp  cli_date_display.cpp  cli_date_display.h  cli_interface.cpp  cli_interface.h  cli_life_index.cpp  cli_life_index.h  cli_menu_controller.cpp  cli_menu_controller.h  cli_update_city.cpp  cli_user_settings.cpp  cli_user_settings.h  cli_weather_display.cpp  cli_weather_display.h  delay.h  updateCity.cpp  updateCity.h
cli/common/: cli_animation_loader.cpp  cli_animation_loader.h  cli_clear_console.cpp  cli_context.h  delay.cpp  delay.h
cli/context_builder/: buildAISuggestionContent.cpp  buildAISuggestionContent.h
cli/dispatch_model/: cli_dispatch_controller.cpp  cli_dispatch_controller.h  cli_menu_dispatch_controller.cpp  cli_menu_dispatch_controller.h
cli/display/: cli_menu_controller.cpp  cli_menu_controller.h
cli/display/ai_advisor/: cli_ai_advisor.cpp  cli_ai_advisor.h
cli/display/date_display/: cli_date_display.cpp
cli/display/life_index/: cli_life_index.cpp
cli/display/update_city/: cli_update_city.cpp  cli_update_city.h
cli/display/user_setting/: cli_user_settings.cpp
cli/display/weather_display/: cli_weather_display.cpp  cli_weather_display.h
cli/displayUtils/: cli_clear_console.cpp
cli/i18n/: i18n_loader.cpp  i18n_loader.h  lang_ar.json  lang_en.json  lang_es.json  lang_ja.json  lang_zh.json
cli/menus_model/: cli_menu_controller.cpp  cli_menu_controller.h
cli/menus_model/ai_advisor/: cli_ai_advisor.cpp  cli_ai_advisor.h
cli/menus_model/date_display/: cli_date_display.cpp  cli_date_display.h
cli/menus_model/life_index/: cli_life_index.cpp  cli_life_index.h
cli/menus_model/update_city/: cli_update_city.cpp  cli_update_city.h
cli/menus_model/user_setting/: cli_user_settings.cpp  cli_user_settings.h
cli/menus_model/weather_display/: cli_weather_display.cpp  cli_weather_display.h
config/: base_config.h  config_context.cpp  config_context.h  config_key.cpp  config_key.h  config_loader.cpp  config_loader.h  config_user.cpp  config_user.h
configs/: configKey.json  configUser.json
core/: CacheManager.cpp  doubao_manager.cpp  doubao_manager.h  weather_manager.cpp  weather_manager.h
docs/: weather_class_diagram_with_methods.puml
gui/: mainwindow.cpp  mainwindow.h  ui_mainwindow.h
src/: main_cli.cpp
src/app/: main_cli.cpp
src/cli/: CMakeLists.txt  cli_application.cpp  cli_application.h  cli_interface.cpp  cli_interface.h
src/cli/common/: cli_animation_loader.cpp  cli_animation_loader.h  cli_clear_console.h  cli_context.cpp  cli_context.h  cli_getch.h  date_utils.cpp  delay.cpp  doubao_translator.h  lunar_api.cpp
src/cli/context_builder/: buildAISuggestionContent.cpp  buildAISuggestionContent.h
src/cli/dispatch_model/: cli_dispatch_controller.cpp
src/cli/display/: cli_menu_controller.cpp  cli_menu_controller.h
src/cli/display/ai_advisor/: cli_ai_advisor.cpp
src/cli/display/date_display/: cli_date_display.cpp  cli_date_display.h
src/cli/display/life_index/: cli_life_index.cpp  cli_life_index.h
src/cli/display/update_city/: cli_update_city.cpp
src/cli/display/user_setting/: cli_user_settings.cpp  cli_user_settings.h
src/cli/display/weather_display/: cli_weather_display.cpp  cli_weather_display.h
src/cli/i18n/: i18n_loader.cpp  i18n_loader.h  lang_ar.json  lang_de.json  lang_en.json  lang_es.json  lang_fr.json  lang_ja.json  lang_zh.json
src/config/: CMakeLists.txt  base_config.cpp  config_context.h  config_key.cpp  config_key.h  config_user.cpp  config_user.h
src/core/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  doubao_manager.cpp  doubao_manager.h  weather_manager.cpp  weather_manager.h
src/gui/: CMakeLists.txt  main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: CMakeLists.txt  date_utils.cpp  date_utils.h  doubao_helper.cpp  http_client.cpp  http_client.h  ip_locator.cpp  ip_locator.h  lunar_api.h
utils/: base_config.cpp  base_config.h  config_key.cpp  config_key.h  config_loader.cpp  config_loader.h  config_user.cpp  config_user.h  date_utils.cpp  date_utils.h  doubao_helper.cpp  doubao_helper.h  doubao_translator.cpp  doubao_translator.h  http_client.h  ip_locator.cpp  ip_locator.h  lunar_api.cpp  lunar_api.h
weather_core/: CacheManager.cpp  CacheManager.h  weather_manager.cpp  weather_manager.h
